--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,7 +46,9 @@
             <span matBadge="{{results?.length}}" matBadgeOverlap="false">Results </span>
           </h2>
           <input type="text" value="5555" #resultValue style="opacity: 0;height: 0px;">
-          <mat-card *ngFor="let result of results; let i = index" class="mt-3">{{result}}<mat-icon class="copy-icon" (click)="addToClipboard(resultValue, result)">filter_none</mat-icon></mat-card>
+          <mat-card *ngFor="let result of results; let i = index" class="mt-3">{{result}}<mat-icon class="copy-icon"
+              (click)="addToClipboard(resultValue, result)">filter_none</mat-icon>
+          </mat-card>
         </div>
       </form>
     </mat-step>
@@ -61,3 +63,13 @@
   </mat-horizontal-stepper>
 
 </div>
+<!-- Footer -->
+<footer class="page-footer font-small special-color-dark pt-4">
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2020 Copyright:
+    <a href="https://github.com/Mina-Dawood"> Mina Dawood</a>
+  </div>
+  <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
