--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -232,8 +232,8 @@
   </mat-vertical-stepper>
 
 </div>
-<!-- <footer class="page-footer font-small special-color-dark pt-4">
+<footer class="page-footer font-small special-color-dark pt-4">
   <div class="footer-copyright text-center py-3">© 2020 Copyright:
-    <a href="https://www.linkedin.com/in/mina-dawoud-28490584/"> Mina Dawood</a>
+    <a href="https://www.linkedin.com/in/mina-dawoud-28490584/"> Mina Dawoud</a>
   </div>
-</footer> -->
+</footer>
