--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -234,6 +234,6 @@
 </div>
 <footer class="page-footer font-small special-color-dark pt-4">
   <div class="footer-copyright text-center py-3">© 2020 Copyright:
-    <a href="https://www.linkedin.com/in/mina-dawoud-28490584/"> Mina Dawoud</a>
+    <a target="_blank" href="https://www.linkedin.com/in/mina-dawoud-28490584/"> Mina Dawoud</a>
   </div>
 </footer>
